--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <title>React App</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-<body>
+<body style="height: 100vh; overflow: hidden">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
